--- a/Mini-projet/team-5/trunk/Changelog
+++ b/Mini-projet/team-5/trunk/Changelog
@@ -1,3 +1,7 @@
+## 21-11-2019
+- Affichage du nom du logiciel ainsi que sa version
+- Fonction revoirPartie() modifié afin qu'elle affiche la position des cartes et le nombre d'oeufs.
+
 ## 20-11-2019
 - Affichage du numéro de la carte
 - Refactoring
